@@ -44,12 +44,12 @@ Class.Methods = {
       var property = properties[i], value = source[property];
       if (ancestor && Object.isFunction(value) &&
           value.argumentNames().first() == "$super") {
-        var method = value, value = Object.extend((function(m) { 
+        var method = value, value =(function(m) {
           return function() { return ancestor[m].apply(this, arguments) };
-        })(property).wrap(method), {
-          valueOf:  function() { return method },
-          toString: function() { return method.toString() }  
-        });
+        })(property).wrap(method);
+
+        value.valueOf = method.valueOf.bind(method);
+        value.toString = method.toString.bind(method);
       }
       this.prototype[property] = value;
     }
@@ -141,7 +141,7 @@ Object.extend(Object, {
   },
   
   isFunction: function(object) {
-    return typeof object == "function";
+    return typeof object == "function" && typeof object.call == "function";
   },
   
   isString: function(object) {
