@@ -228,13 +228,14 @@ Object.extend(String.prototype.escapeHTML, {
 
 String.prototype.escapeHTML.container.appendChild(String.prototype.escapeHTML.text);
 
-if (Prototype.Browser.IE)
+if (Prototype.Browser.IE) {
   // IE converts all newlines to carriage returns so we swap them back
   String.prototype.unescapeHTML = String.prototype.unescapeHTML.wrap(function(proceed) {
     return proceed().replace(/\r/g, '\n')
   });
+}
 
-if (Prototype.Browser.WebKit && Prototype.BrowserFeatures.SelectorsAPI)
+if ('>'.escapeHTML() !== '&gt;') {
   // Safari 3.x has issues with escaping the ">" character
   (function() {
     var escapeHTML = String.prototype.escapeHTML;
@@ -246,6 +247,7 @@ if (Prototype.Browser.WebKit && Prototype.BrowserFeatures.SelectorsAPI)
       text: escapeHTML.text
     })
   })();
+}
   
 if ('&'.escapeHTML() !== '&amp;') {
   // Safari 2.x has issues with escaping html inside a "pre" element so we use the deprecated "xmp" element instead
