@@ -930,12 +930,6 @@ new Test.Unit.Runner({
     // height/width should always be calculated if it's set to "auto" (Firefox)
     this.assertNotNull($('auto_dimensions').getStyle('height'));
     this.assertNotNull($('auto_dimensions').getStyle('width'));
-    
-    // check to see if other units convert to px
-    var backup = $('style_test_1').getStyle('height');
-    $('style_test_1').show().setStyle({height: '2in'});
-    this.assertEqual(192, parseInt($('style_test_1').getStyle('height')));
-    $('style_test_1').setStyle({height: backup});
   },
   
   testElementGetOpacity: function() {
