@@ -20,8 +20,6 @@
 
 * Fix IE issue with Element#replace() removing the childNodes of the returned element. Closes #11225. [Rukawa, jddalton]
 
-* Ensure Element#getStyle returns values in px unit, regardless of how they are set. [Andrew Dupont, jddalton]
-
 * Fixed IE error in the Selector class that caused matching element ids to fail when the element wasn't attached to the document. Closes #9766. [jddalton, kangax, shazam]
 
 * Ensure tagName selectors return an array and not a nodeList. [jddalton]
@@ -29,6 +27,12 @@
 * Make Object.isNumber return false for NaN, -infinity, and +infinity. Closes #10595. [foca, kangax]
 
 * Fix Object.isHash throwing error when passed undefined variable in IE. [Viktor Kojouharov, jddalton]
+
+* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). (kangax)
+ 
+* Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. (kangax)
+ 
+* Fix Object.isFunction returning true for RegExp objects and NodeLists in WebKit. (kangax)
 
 * Fix issue where Ajax.Request does not work with local files in IE7. Closes #8259. [hagen.seifert, jddalton]
 
